# licenta

./: .gitignore
GlowMindRealtime/: glowmind_history.db  main.py  pyproject.toml  requirements.txt
GlowMindRealtime/glowmind/: __init__.py  api.py  cli.py  config.py  dashboard.html  display.py  emotion.py  hardware.py  history_store.py  inference.py  runner.py  runtime_metrics.py  session_stats.py  stream_state.py
GlowMindRealtime/tests/: test_api.py  test_config.py  test_emotion.py  test_session_stats.py  test_stream_state.py
