[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glowmind-realtime"
version = "0.1.0"
description = "Realtime valence/arousal from webcam to emotion-mapped LED output"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "torchvision>=0.15",
  "opencv-python>=4.5",
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
glowmind = "glowmind.cli:main"

[tool.setuptools]
packages = ["glowmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
